# trmnl-plugin-grafana

./: .env.example  .gitignore  .trmnlp.yml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-api.yml
examples/: bargauge.trmnlp.yml  error.trmnlp.yml  gauge.trmnlp.yml  polystat-large.trmnlp.yml  table.trmnlp.yml  timeseries.trmnlp.yml
service/: __init__.py  api.py  config.py  main.py  rate_limiter.py  test_data.py  trmnl.py
service/grafana/: __init__.py  client.py  exceptions.py  models.py
service/transformers/: __init__.py  base.py  gauge.py  polystat.py  stat.py  table.py  timeseries.py
src/: full.liquid  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid  settings.yml  shared.liquid
tests/: __init__.py  conftest.py  test_api.py  test_client.py  test_config.py  test_models.py  test_template_variables.py  test_transformers.py  test_trmnl.py
